# babamodmanager

./: .gitignore  Cargo.toml  README.md
src/: app.rs  baba.rs  error.rs  files.rs  levelpack.rs  main.rs  merge.rs  mods.rs  test.rs
src/application/: activeapp.rs  app.rs  appoptions.rs  appstate.rs  mod.rs  status.rs  themedata.rs
src/data/: !doc.md  Config.json  add_objects.lua  babafuncs.txt  editorfuncs.json  init.lua
src/error/: applicationerror.rs  babaerror.rs  levelpackerror.rs  mod.rs  moddingerror.rs
src/files/: babafiles.rs  editorfuncs.rs  luafile.rs  mod.rs  writeinto.rs
src/levelpack/: levelpack.rs  levelpackfile.rs  levelpackrepr.rs  mod.rs
src/merge/: mergeoptions.rs  mod.rs
src/mods/: babamod.rs  config.rs  luafuncdef.rs  luafunction.rs  mod.rs
