[package]
name = "babamodmanager"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_debug_implementations = "deny"

[dependencies]
diff-match-patch-rs = "0.4.1"
eframe = "0.31.0"
egui = { version = "0.31.0", features = ["serde"] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.6", features = ["png"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.12"
